# oRs-interpreter

./: README.md  dune-project  oRun.opam
lib/: ast.ml  dune  env.ml  eval.ml  lexer.ml  lexer.mli  object.ml  parser.ml  token.ml
test/: dune  lexer.ml  test_eval.ml  test_interpreter.ml  test_lexer.ml  test_parser.ml
test/inputs/: hello_world.ors
